k8s/frontend-canary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-canary
spec:
  replicas: 1
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  selector:
    matchLabels:
        type: frontend 
        app: user
        version: canary
  template:
    metadata:
      labels:
        type: frontend 
        app: user
        version: canary 
    spec:
      containers:
        - name: nginx
          image: sjhyun0000/user-front:2.0
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/
          ports:
            - containerPort: 80
      volumes:
        - name: nginx-config
          configMap:
            name: front-nginx-config-canary
