k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v{version}
spec:
  replicas: 3
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  selector:
    matchLabels:
        type: frontend 
        app: user
        #version: stable 
        #canary: "false"
  template:
    metadata:
      labels:
        type: frontend 
        app: user
        #version: stable 
        #canary: "false"
    spec:
      containers:
        - name: nginx
          image: sjhyun0000/user-front:2.0
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/
          ports:
            - containerPort: 80
      volumes:
        - name: nginx-config
          configMap:
            name: front-nginx-config
