k8s/frontend-canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
  namespace: sjh
spec:
  selector:
    type: frontend
    app: user
    canary: "true"
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
