k8s/frontend-loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-loadbalancer
  namespace: sjh
spec:
  type: LoadBalancer
  selector:
    type: frontend  # ✅ Stable과 Canary 둘 다 선택 (레플리카 수로 트래픽 조절)
    app: user
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
