k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service-v{version}
  namespace: sjh
spec:
  selector:
    type: frontend
    app: user
    version: "{version}"
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
